Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66074

When using geometry shaders they don't appear to be available when OpenGL ES 3.2 is used

XMLWordPrintable

    • 76c4a7049957a0497530e06cccb92cebf3f1477d

      When using geometry shaders they don't appear to be available when OpenGL ES 3.2 is used. When attempting to use them then the error:

      "QOpenGLShader: could not create shader"
      

      appears.

        For Gerrit Dashboard: QTBUG-66074
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes